Mis à jour btn responsive

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                 </div>
             </div>
         </nav>
-  
-  
+
         <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -55,16 +54,24 @@
                     <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
                         <h1>Partez à l'aventure</h1>
                         <p>Découvrez notre école de surf en peer-learning</p>
-                        <div class="d-flex justify-content-center gap-3 mt-4">
-                            <p><a class="btn btn-lg btn-primary" href="#">Je m'inscris à la prochaine session</a></p>
-                            <p><a class="btn btn-lg btn-outline-primary" href="#">Je découvre le programme</a></p>
+                        <div class="d-flex flex-column flex-md-row justify-content-center gap-3 mt-4">
+                            <p class="w-100 w-md-auto">
+                                <a class="btn btn-lg btn-primary w-100 w-md-auto" href="#">Je m'inscris à la prochaine
+                                    session</a>
+                            </p>
+                            <p class="w-100 w-md-auto">
+                                <a class="btn btn-lg btn-outline-primary w-100 w-md-auto" href="#">Je découvre le
+                                    programme</a>
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </header>
-        <main>
+ 
+    <main>
         <div class="container">
             <h1 class="text-center mt-5 mb-4">The Surfing Project en 3 points</h1>
             <div class="container marketing text-center">
